<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF0F1">

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:elevation="100dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_item_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:fontFamily="@font/courier_prime"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="@string/name" />

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/description_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.545"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_title"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="306dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/img_item_photo"
                app:layout_constraintHorizontal_bias="0.594"
                app:layout_constraintStart_toStartOf="@+id/img_item_photo"
                app:layout_constraintTop_toBottomOf="@+id/img_item_photo"
                tools:text="@string/desc" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
